filtered winetype data so its more uniform

--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -72,7 +72,7 @@
     "- takes in global shape files for regions and districts, adds this data to the wine dataframe \n",
     "\n",
     "Popular_Wine_Stats\n",
-    "- returns a dataframe with the 5 most popular producers of the most popular winetype in the most popular region in the top 8  most popular countries "
+    "- returns a dataframe with the most popular producer of the most popular winetype in the most popular district and region in the top 8 most popular countries "
    ]
   },
   {
@@ -565,7 +565,7 @@
     "    df_urllatlong[['Price', 'Producer','Lat', 'Long', 'URL']] = df.drop_duplicates(subset = 'Producer')[['Price', 'Producer',  'Lat', 'Long', 'URL']]\n",
     "    final_popular_wines = pd.merge(popular_wines, df_urllatlong, on = 'Producer')\n",
     "    \n",
-    "    return final_popular_wines.iloc[:, 2:]\n"
+    "    return final_popular_wines.iloc[:, 2:]"
    ]
   },
   {
