Added some graphs, worked on some

--- a/03_Training_Dataset.ipynb
+++ b/03_Training_Dataset.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
     "    int_df = pd.merge(vintage_df_M2, district_df, on = 'Producer/WineType')\n",
     "    \n",
     "    final_df = pd.DataFrame()\n",
-    "    final_df[['Producer/WineType', 'District', 'Year', 'Rating', 'Price', 'Type']] = int_df[['Producer/WineType', 'Top District', 'Year_v', 'Ratings Average', 'Price', 'Type']]\n",
+    "    final_df[['Producer/WineType', 'District', 'Year', 'Ratings Average', 'Price', 'Type']] = int_df[['Producer/WineType', 'Top District', 'Year_v', 'Ratings Average', 'Price', 'Type']]\n",
     "\n",
     "    final_df[['Producer', 'WineType']] = final_df['Producer/WineType'].str.split('/', expand = True)\n",
     "    final_df['District/Year'] = (final_df['District'] + '/' + final_df['Year'].astype(str)).str.lower().str.strip()\n",
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
