--- a/03_Training_Dataset.ipynb
+++ b/03_Training_Dataset.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,6 +322,10 @@
     "                #Change month number to month name\n",
     "                month = month_names[month]\n",
     "\n",
+    "                #Add in data around extreme temperature conditions\n",
+    "                days_below_0 = Grouped_Daily_into_Monthly['Avg Temp (°C)'].apply(lambda row: (row <= 0).sum())\n",
+    "                days_above_0 = Grouped_Daily_into_Monthly['Avg Temp (°C)'].apply(lambda row: (row >= 0).sum())\n",
+    "\n",
     "                yearly_data.update({\n",
     "                    \n",
     "                    'WineType' : Grouped_Daily_into_Monthly['Top WineType'].first()[0],\n",
@@ -340,7 +344,9 @@
     "                    f'{month} Max Wind Speed (Km/h)' : Grouped_Daily_into_Monthly['Max Wind Speed (Km/h)'].max().iloc[0],\n",
     "                    f'{month} Min Wind Speed (Km/h)' : Grouped_Daily_into_Monthly['Min Wind Speed (Km/h)'].min().iloc[0],\n",
     "                    f'{month} Avg Wind Speed (Km/h)' : Grouped_Daily_into_Monthly['Avg Wind Speed (Km/h)'].mean().iloc[0],\n",
-    "                    f'{month} Avg Daylight Hours' : Grouped_Daily_into_Monthly['Daylight Hours'].mean().iloc[0] \n",
+    "                    f'{month} Avg Daylight Hours' : Grouped_Daily_into_Monthly['Daylight Hours'].mean().iloc[0], \n",
+    "                    f'{month} Days Below 0 (°C)': days_below_0.iloc[0],\n",
+    "                    f'{month} Days Above 32 (°C)': days_above_0.iloc[0]\n",
     "\n",
     "                })\n",
     "            \n",
@@ -370,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +399,7 @@
     "\n",
     "    district_df = all_bottle_data[['Producer/WineType', 'Top District', 'Price']]\n",
     "\n",
-    "    int_df = pd.merge(vintage_df_M2, district_df, on = 'Producer/WineType')\n",
+    "    int_df = pd.merge(district_df, vintage_df_M2 on = 'Producer/WineType')\n",
     "    \n",
     "    final_df = pd.DataFrame()\n",
     "    final_df[['Producer/WineType', 'District', 'Year', 'Ratings Average', 'Price', 'Type']] = int_df[['Producer/WineType', 'Top District', 'Year_v', 'Ratings Average', 'Price', 'Type']]\n",
@@ -446,25 +452,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\fwhal\\AppData\\Local\\Temp\\ipykernel_8096\\4154198427.py:54: UserWarning: Converting to PeriodArray/Index representation will drop timezone information.\n",
+      "C:\\Users\\fwhal\\AppData\\Local\\Temp\\ipykernel_8096\\657629713.py:54: UserWarning: Converting to PeriodArray/Index representation will drop timezone information.\n",
       "  Grouped_Daily_into_Monthly = monthly_df.groupby(monthly_df.index.to_period('M'))\n",
-      "C:\\Users\\fwhal\\AppData\\Local\\Temp\\ipykernel_8096\\4154198427.py:61: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\fwhal\\AppData\\Local\\Temp\\ipykernel_8096\\657629713.py:61: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  'WineType' : Grouped_Daily_into_Monthly['Top WineType'].first()[0],\n",
-      "C:\\Users\\fwhal\\AppData\\Local\\Temp\\ipykernel_8096\\4154198427.py:62: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\fwhal\\AppData\\Local\\Temp\\ipykernel_8096\\657629713.py:62: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  'District' : Grouped_Daily_into_Monthly['Top District'].first()[0],\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'<' not supported between instances of 'SeriesGroupBy' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[145], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m recommended_vintages_M1_df, all_vintages_M1_df \u001b[38;5;241m=\u001b[39m Vintage_Dataframe(FINAL_wine_df_filtered_1Bottle_FINAL)\n\u001b[0;32m      2\u001b[0m vintage_df_M1_final \u001b[38;5;241m=\u001b[39m Final_Vintage_Dataframe(recommended_vintages_M1_df, all_vintages_M1_df, FINAL_wine_df_FINAL, lower_date_bound \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2000\u001b[39m, lower_rating_bound  \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3\u001b[39m, lower_review_count \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m FINAL_training_data_Model1_FINAL, Columned_Weather_Data \u001b[38;5;241m=\u001b[39m Training_Data(FINAL_weather_data_FINAL, vintage_df_M1_final)\n\u001b[0;32m      5\u001b[0m FINAL_training_data_Model1_FINAL\u001b[38;5;241m.\u001b[39mto_csv(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(final_df_file_path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFINAL_training_data_Model1_FINAL.csv\u001b[39m\u001b[38;5;124m'\u001b[39m), index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "Cell \u001b[1;32mIn[144], line 78\u001b[0m, in \u001b[0;36mTraining_Data\u001b[1;34m(weather_df, vintage_df)\u001b[0m\n\u001b[0;32m     56\u001b[0m     \u001b[38;5;66;03m#Change month number to month name\u001b[39;00m\n\u001b[0;32m     57\u001b[0m     month \u001b[38;5;241m=\u001b[39m month_names[month]\n\u001b[0;32m     59\u001b[0m     yearly_data\u001b[38;5;241m.\u001b[39mupdate({\n\u001b[0;32m     60\u001b[0m         \n\u001b[0;32m     61\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWineType\u001b[39m\u001b[38;5;124m'\u001b[39m : Grouped_Daily_into_Monthly[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTop WineType\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mfirst()[\u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m     62\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDistrict\u001b[39m\u001b[38;5;124m'\u001b[39m : Grouped_Daily_into_Monthly[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTop District\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mfirst()[\u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m     63\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmonth\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Max Temp (°C)\u001b[39m\u001b[38;5;124m'\u001b[39m : Grouped_Daily_into_Monthly[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMax Temp (°C)\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmax()\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m     64\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmonth\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Min Temp (°C)\u001b[39m\u001b[38;5;124m'\u001b[39m : Grouped_Daily_into_Monthly[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMin Temp (°C)\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmin()\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m     65\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmonth\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Avg Temp (°C)\u001b[39m\u001b[38;5;124m'\u001b[39m : Grouped_Daily_into_Monthly[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAvg Temp (°C)\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmean()\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m     66\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmonth\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Max Relative Humidity\u001b[39m\u001b[38;5;124m'\u001b[39m : Grouped_Daily_into_Monthly[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMax Relative Humidity\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmax()\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m     67\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmonth\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Min Relative Humidity\u001b[39m\u001b[38;5;124m'\u001b[39m : Grouped_Daily_into_Monthly[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMin Relative Humidity\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmin()\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m     68\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmonth\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Avg Relative Humidity\u001b[39m\u001b[38;5;124m'\u001b[39m : Grouped_Daily_into_Monthly[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMax Relative Humidity\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmean()\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m     69\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmonth\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Cumulative Rain (mm)\u001b[39m\u001b[38;5;124m'\u001b[39m : Grouped_Daily_into_Monthly[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCumulative Rain (mm)\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39msum()\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m     70\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmonth\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Cumulative Snow (mm)\u001b[39m\u001b[38;5;124m'\u001b[39m : Grouped_Daily_into_Monthly[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCumulative Snow (mm)\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39msum()\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m     71\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmonth\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Cumulative Precip (mm)\u001b[39m\u001b[38;5;124m'\u001b[39m : Grouped_Daily_into_Monthly[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCumulative Rain (mm)\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39msum()\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m Grouped_Daily_into_Monthly[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCumulative Snow (mm)\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39msum()\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m     72\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmonth\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Cumulative Snow (mm)\u001b[39m\u001b[38;5;124m'\u001b[39m : Grouped_Daily_into_Monthly[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCumulative Snow (mm)\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39msum()\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m     73\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmonth\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Avg Cloud Cover (%)\u001b[39m\u001b[38;5;124m'\u001b[39m : Grouped_Daily_into_Monthly[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAvg Cloud Cover (\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmean()\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m     74\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmonth\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Max Wind Speed (Km/h)\u001b[39m\u001b[38;5;124m'\u001b[39m : Grouped_Daily_into_Monthly[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMax Wind Speed (Km/h)\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmax()\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m     75\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmonth\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Min Wind Speed (Km/h)\u001b[39m\u001b[38;5;124m'\u001b[39m : Grouped_Daily_into_Monthly[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMin Wind Speed (Km/h)\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmin()\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m     76\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmonth\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Avg Wind Speed (Km/h)\u001b[39m\u001b[38;5;124m'\u001b[39m : Grouped_Daily_into_Monthly[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAvg Wind Speed (Km/h)\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmean()\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m],\n\u001b[0;32m     77\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmonth\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Avg Daylight Hours\u001b[39m\u001b[38;5;124m'\u001b[39m : Grouped_Daily_into_Monthly[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDaylight Hours\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmean()\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m], \n\u001b[1;32m---> 78\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmonth\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Days Below 0 (°C)\u001b[39m\u001b[38;5;124m'\u001b[39m: (Grouped_Daily_into_Monthly[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAvg Temp (°C)\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m)\u001b[38;5;241m.\u001b[39msum(),\n\u001b[0;32m     79\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmonth\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Days Above 32 (°C)\u001b[39m\u001b[38;5;124m'\u001b[39m: (Grouped_Daily_into_Monthly[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAvg Temp (°C)\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m32\u001b[39m)\u001b[38;5;241m.\u001b[39msum()\n\u001b[0;32m     80\u001b[0m \n\u001b[0;32m     81\u001b[0m     })\n\u001b[0;32m     83\u001b[0m \u001b[38;5;66;03m#Adds this yearly data to original df\u001b[39;00m\n\u001b[0;32m     84\u001b[0m final_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat([final_df, pd\u001b[38;5;241m.\u001b[39mDataFrame([yearly_data])], ignore_index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: '<' not supported between instances of 'SeriesGroupBy' and 'int'"
      ]
     }
    ],
    "source": [
     "recommended_vintages_M1_df, all_vintages_M1_df = Vintage_Dataframe(FINAL_wine_df_filtered_1Bottle_FINAL)\n",
-    "vintage_df_M1_final = Final_Vintage_Dataframe(recommended_vintages_M1_df, all_vintages_M1_df, FINAL_wine_df_FINAL, lower_date_bound = 1900, lower_rating_bound  = 3, lower_review_count = 1)\n",
+    "vintage_df_M1_final = Final_Vintage_Dataframe(recommended_vintages_M1_df, all_vintages_M1_df, FINAL_wine_df_FINAL, lower_date_bound = 2000, lower_rating_bound  = 3, lower_review_count = 1)\n",
     "\n",
     "FINAL_training_data_Model1_FINAL, Columned_Weather_Data = Training_Data(FINAL_weather_data_FINAL, vintage_df_M1_final)\n",
     "FINAL_training_data_Model1_FINAL.to_csv(os.path.join(final_df_file_path, 'FINAL_training_data_Model1_FINAL.csv'), index=False)"
@@ -477,7 +495,7 @@
    "outputs": [],
    "source": [
     "recommended_vintages_M2_df, all_vintages_M2_df = Vintage_Dataframe(FINAL_wine_df_filtered_All_Bottles_FINAL)\n",
-    "vintage_df_M2_final = Final_Vintage_Dataframe(recommended_vintages_M2_df, all_vintages_M2_df, FINAL_wine_df_FINAL, lower_date_bound = 1900, lower_rating_bound  = 3, lower_review_count = 1)\n",
+    "vintage_df_M2_final = Final_Vintage_Dataframe(recommended_vintages_M2_df, all_vintages_M2_df, FINAL_wine_df_FINAL, lower_date_bound = 2000, lower_rating_bound  = 3, lower_review_count = 1)\n",
     "vintage_df_M2_final.to_csv(os.path.join(final_df_file_path, 'vintage_df_M2_final.csv'), index=False)\n",
     "\n",
     "FINAL_training_data_Model2_FINAL = Training_Data_Model2(Columned_Weather_Data, vintage_df_M2_final, FINAL_wine_df_filtered_All_Bottles_FINAL)\n",
@@ -520,7 +538,16 @@
    "outputs": [],
    "source": [
     "FINAL_training_data_Model2_FINAL = Training_Data_Model2(Columned_Weather_Data, vintage_df_M2_final, FINAL_wine_df_filtered_All_Bottles_FINAL)\n",
-    "FINAL_training_data_Model2_FINAL.to_csv(os.path.join(final_df_file_path, 'FINAL_training_data_Model2_FINAL.csv'), index=False)"
+    "# FINAL_training_data_Model2_FINAL.to_csv(os.path.join(final_df_file_path, 'FINAL_training_data_Model2_FINAL.csv'), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FINAL_training_data_Model2_FINAL"
    ]
   },
   {
