Updated a bunch of files, changed outputs, and worked on machine learning

--- a/03_Training_Dataset.ipynb
+++ b/03_Training_Dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,6 @@
     "\n",
     "    #Concatenate the original DataFrame with the new columns\n",
     "    all_vintages_df_True = pd.concat([all_vintages_df_True, new_columns], axis=1)\n",
-    "    \n",
     "\n",
     "    #Grabs specific volumns from the vintage data \n",
     "    df4 = all_vintages_df_True[[\n",
@@ -269,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,6 +289,20 @@
     "    if type(weather_df.index[0]) == int:\n",
     "\n",
     "        weather_df = weather_df.set_index('Date') \n",
+    "\n",
+    "    #Filter the vintage_df to make winetypes uniform \n",
+    "    popular_wine_types = ['château margaux', 'cabernet sauvignon', 'pinot noir', 'zinfandel', 'syrah', \n",
+    "                            'pinot gris', 'sauvignon blanc', 'chardonnay', 'baco noir', 'bordeaux',\n",
+    "                            'malbec', 'chardonnay', 'pinot grigio', 'merlot', 'sangiovese', 'shiraz',\n",
+    "                            'cabernet franc', 'muscat', 'grenache', 'sangiovese'  ]\n",
+    "    \n",
+    "    #Sets all the winetypes to be lower \n",
+    "    vintage_df['WineType'] = vintage_df['WineType'].str.lower()\n",
+    "\n",
+    "    #Filters through each of the winetypes, then changes the df winetype name if the wine type is in the row string \n",
+    "    for winetype in popular_wine_types:\n",
+    "\n",
+    "        vintage_df['WineType']  = vintage_df['WineType'].apply(lambda row: next((winetype for winetype in popular_wine_types if winetype in row), row))\n",
     "\n",
     "    #Create a column for the year and produce all the unique years\n",
     "    weather_df.index = pd.to_datetime(weather_df.index)\n",
@@ -371,7 +384,7 @@
     "    final_df = pd.merge(final_df, vintage_df, on = 'Producer_Year', how = 'left')\n",
     "    \n",
     "    #Modify the dataframe for easier viewing\n",
-    "    final_df = final_df.drop(columns = ['index','Producer_Year', 'ID', 'Reviews_Count', 'Name', 'Year_v'])\n",
+    "    final_df = final_df.drop(columns = ['index','Producer_Year', 'ID', 'Reviews_Count', 'Name', 'Year_v', 'Producer_x', 'WineType_x'])\n",
     "    \n",
     "    final_df.insert(0, 'Producer', final_df.pop('Producer_y'))\n",
     "    final_df.insert(1, 'WineType', final_df.pop('WineType_y'))\n",
@@ -388,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,30 +416,44 @@
     "        Creating this dataframe to show local trends based on vintage qualitative data\n",
     "\n",
     "    \"\"\"\n",
+    "\n",
+    "    vintage_df_M2 = vintage_df_M2.dropna(subset=['Producer', 'WineType'])\n",
+    "    all_bottle_data = all_bottle_data.dropna(subset=['Producer', 'WineType'])\n",
+    "\n",
     "    #Add a producer/winetype column to both dataframes\n",
-    "    vintage_df_M2['Producer_WineType'] = (vintage_df_M2['Name'] + '/' +  vintage_df_M2['WineType']).str.lower().str.strip()\n",
+    "    vintage_df_M2['Producer_WineType'] = (vintage_df_M2['Producer'] + '/' +  vintage_df_M2['WineType']).str.lower().str.strip()\n",
     "    all_bottle_data['Producer_WineType'] = (all_bottle_data['Producer'] + '/' +  all_bottle_data['WineType']).str.lower().str.strip()\n",
     "\n",
     "    #Drop the producer winetype columns\n",
-    "    vintage_df_M2 = vintage_df_M2.drop(columns = ['Name', 'WineType'])\n",
+    "    vintage_df_M2 = vintage_df_M2.drop(columns = ['Producer', 'WineType'])\n",
     "    all_bottle_data = all_bottle_data.drop(columns = ['Producer', 'WineType'])\n",
     "\n",
+    "    #Grab important data from all_bottle_data\n",
     "    district_df = all_bottle_data[['Producer_WineType', 'Top District', 'Price']]\n",
     "\n",
+    "    #Merge on producer_winetype with vintage data, only keeping the relevent data\n",
     "    int_df = pd.merge(district_df, vintage_df_M2, on = 'Producer_WineType')\n",
-    "    \n",
-    "    final_df = pd.DataFrame()\n",
-    "    final_df[['Producer_WineType', 'District', 'Year', 'Ratings Average', 'Price', 'Type']] = int_df[['Producer_WineType', 'Top District', 'Year_v', 'Ratings Average', 'Price', 'Type']]\n",
     "\n",
-    "    final_df[['Producer', 'WineType']] = final_df['Producer/WineType'].str.split('/', expand = True)\n",
+    "    #Set out the important columns for the final_df\n",
+    "    final_df = int_df[['Producer_WineType', 'Top District', 'Year_v', 'Ratings_Average', 'Price', 'Acidity', 'Intensity', 'Sweetness', 'Tannin', 'Type']].copy()\n",
+    "    final_df.columns = ['Producer_WineType', 'District', 'Year', 'Ratings_Average', 'Price', 'Acidity', 'Intensity', 'Sweetness', 'Tannin', 'Type']\n",
+    "\n",
+    "    #Create a producer, winetype, and district_year column (the expand statement for split did not work)\n",
+    "    final_df = final_df[final_df['Producer_WineType'].str.contains('/')]\n",
+    "    final_df['Producer'] = final_df['Producer_WineType'].str.split('/').str[0]\n",
+    "    final_df['WineType'] = final_df['Producer_WineType'].str.split('/').str[1]\n",
+    "\n",
     "    final_df['District_Year'] = (final_df['District'] + '/' + final_df['Year'].astype(str)).str.lower().str.strip()\n",
     "    \n",
+    "    #Create a district_year column for merging and drop columns that are not relevent \n",
     "    formatted_weather_data['District_Year'] = (formatted_weather_data['District'] + '/' + formatted_weather_data['Year'].astype(str)).str.lower().str.strip()\n",
     "    formatted_weather_data = formatted_weather_data.drop(columns = ['Producer', 'Year', 'WineType', 'District'])\n",
     "\n",
+    "    #Merge weather data on the final dataframe and drop irrelevent columns \n",
     "    final_df_M2 = pd.merge(final_df, formatted_weather_data, on = 'District_Year', how = 'left')  \n",
-    "    final_df_M2 = final_df_M2.drop(columns = ['Producer_Year', 'District_Year', 'Producer/WineType', ])\n",
+    "    final_df_M2 = final_df_M2.drop(columns = ['Producer_Year', 'District_Year', 'Producer_WineType', ])\n",
     "\n",
+    "    #Re-order columns for easier viewing\n",
     "    final_df_M2.insert(0, 'Producer', final_df_M2.pop('Producer'))\n",
     "    final_df_M2.insert(1, 'WineType', final_df_M2.pop('WineType'))\n",
     "    final_df_M2.insert(2, 'District', final_df_M2.pop('District'))\n",
@@ -439,15 +466,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Variable Section 4 \n",
-    "---"
+    "---\n",
+    "## Variable Section 4 \n"
    ]
   },
   {
@@ -459,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -494,11 +514,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\fwhal\\AppData\\Local\\Temp\\ipykernel_18500\\633660012.py:54: UserWarning: Converting to PeriodArray/Index representation will drop timezone information.\n",
+      "C:\\Users\\fwhal\\AppData\\Local\\Temp\\ipykernel_29296\\765666366.py:68: UserWarning: Converting to PeriodArray/Index representation will drop timezone information.\n",
       "  Grouped_Daily_into_Monthly = monthly_df.groupby(monthly_df.index.to_period('M'))\n",
-      "C:\\Users\\fwhal\\AppData\\Local\\Temp\\ipykernel_18500\\633660012.py:61: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\fwhal\\AppData\\Local\\Temp\\ipykernel_29296\\765666366.py:75: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  'WineType' : Grouped_Daily_into_Monthly['Top WineType'].first()[0],\n",
-      "C:\\Users\\fwhal\\AppData\\Local\\Temp\\ipykernel_18500\\633660012.py:62: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\fwhal\\AppData\\Local\\Temp\\ipykernel_29296\\765666366.py:76: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  'District' : Grouped_Daily_into_Monthly['Top District'].first()[0],\n"
      ]
     }
@@ -520,184 +540,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recommended_vintages_M2_df, all_vintages_M2_df = Vintage_Dataframe(FINAL_wine_df_filtered_All_Bottles_FINAL)\n",
-    "vintage_df_M2_final = Final_Vintage_Dataframe(recommended_vintages_M2_df, all_vintages_M2_df, FINAL_wine_df_FINAL, lower_date_bound = 2000, lower_rating_bound  = 3, lower_review_count = 1)\n",
-    "vintage_df_M2_final.to_csv(os.path.join(final_df_file_path, 'vintage_df_M2_final.csv'), index=False)\n",
+    "# recommended_vintages_M2_df, all_vintages_M2_df = Vintage_Dataframe(FINAL_wine_df_filtered_All_Bottles_FINAL)\n",
+    "# vintage_df_M2_final = Final_Vintage_Dataframe(recommended_vintages_M2_df, all_vintages_M2_df, FINAL_wine_df_FINAL, lower_date_bound = 2000, lower_rating_bound  = 3, lower_review_count = 1)\n",
+    "# vintage_df_M2_final.to_csv(os.path.join(final_df_file_path, 'vintage_df_M2_final.csv'), index=False)\n",
     "\n",
-    "FINAL_training_data_Model2_FINAL = Training_Data_Model2(Columned_Weather_Data, vintage_df_M2_final, FINAL_wine_df_filtered_All_Bottles_FINAL)\n",
-    "FINAL_training_data_Model2_FINAL.to_csv(os.path.join(final_df_file_path, 'FINAL_training_data_Model2_FINAL.csv'), index=False)"
+    "# FINAL_training_data_Model2_FINAL = Training_Data_Model2(Columned_Weather_Data, vintage_df_M2_final, FINAL_wine_df_filtered_All_Bottles_FINAL)\n",
+    "# FINAL_training_data_Model2_FINAL.to_csv(os.path.join(final_df_file_path, 'FINAL_training_data_Model2_FINAL.csv'), index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Country Count</th>\n",
-       "      <th>Top Region</th>\n",
-       "      <th>Region Count</th>\n",
-       "      <th>Top District</th>\n",
-       "      <th>WineType</th>\n",
-       "      <th>Producer</th>\n",
-       "      <th>Rating</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>URL</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Long</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>6705</td>\n",
-       "      <td>California</td>\n",
-       "      <td>2496</td>\n",
-       "      <td>Sonoma</td>\n",
-       "      <td>acaibo</td>\n",
-       "      <td>Trinite Estate</td>\n",
-       "      <td>4.15</td>\n",
-       "      <td>100.80</td>\n",
-       "      <td>https://www.vivino.com/trinite-estate-acaibo/w...</td>\n",
-       "      <td>38.51108</td>\n",
-       "      <td>-122.847339</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>6705</td>\n",
-       "      <td>California</td>\n",
-       "      <td>2496</td>\n",
-       "      <td>Sonoma</td>\n",
-       "      <td>angeli (estate grown)</td>\n",
-       "      <td>Marietta</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>62.99</td>\n",
-       "      <td>https://www.vivino.com/marietta-cellars-game-t...</td>\n",
-       "      <td>38.51108</td>\n",
-       "      <td>-122.847339</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>6705</td>\n",
-       "      <td>California</td>\n",
-       "      <td>2496</td>\n",
-       "      <td>Sonoma</td>\n",
-       "      <td>armé (estate grown)</td>\n",
-       "      <td>Marietta</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>62.99</td>\n",
-       "      <td>https://www.vivino.com/marietta-cellars-game-t...</td>\n",
-       "      <td>38.51108</td>\n",
-       "      <td>-122.847339</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>6705</td>\n",
-       "      <td>California</td>\n",
-       "      <td>2496</td>\n",
-       "      <td>Sonoma</td>\n",
-       "      <td>christo (estate grown)</td>\n",
-       "      <td>Marietta</td>\n",
-       "      <td>3.90</td>\n",
-       "      <td>62.99</td>\n",
-       "      <td>https://www.vivino.com/marietta-cellars-game-t...</td>\n",
-       "      <td>38.51108</td>\n",
-       "      <td>-122.847339</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>6705</td>\n",
-       "      <td>California</td>\n",
-       "      <td>2496</td>\n",
-       "      <td>Sonoma</td>\n",
-       "      <td>zinfandel</td>\n",
-       "      <td>Marietta</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>62.99</td>\n",
-       "      <td>https://www.vivino.com/marietta-cellars-game-t...</td>\n",
-       "      <td>38.51108</td>\n",
-       "      <td>-122.847339</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0  Country Count  Top Region  Region Count Top District  \\\n",
-       "0           0           6705  California          2496       Sonoma   \n",
-       "1           1           6705  California          2496       Sonoma   \n",
-       "2           2           6705  California          2496       Sonoma   \n",
-       "3           3           6705  California          2496       Sonoma   \n",
-       "4           4           6705  California          2496       Sonoma   \n",
-       "\n",
-       "                 WineType        Producer  Rating   Price  \\\n",
-       "0                  acaibo  Trinite Estate    4.15  100.80   \n",
-       "1   angeli (estate grown)        Marietta    4.00   62.99   \n",
-       "2     armé (estate grown)        Marietta    4.00   62.99   \n",
-       "3  christo (estate grown)        Marietta    3.90   62.99   \n",
-       "4               zinfandel        Marietta    4.00   62.99   \n",
-       "\n",
-       "                                                 URL       Lat        Long  \n",
-       "0  https://www.vivino.com/trinite-estate-acaibo/w...  38.51108 -122.847339  \n",
-       "1  https://www.vivino.com/marietta-cellars-game-t...  38.51108 -122.847339  \n",
-       "2  https://www.vivino.com/marietta-cellars-game-t...  38.51108 -122.847339  \n",
-       "3  https://www.vivino.com/marietta-cellars-game-t...  38.51108 -122.847339  \n",
-       "4  https://www.vivino.com/marietta-cellars-game-t...  38.51108 -122.847339  "
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "FINAL_wine_df_filtered_All_Bottles_FINAL.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recommended_vintages_M2_df, all_vintages_M2_df = Vintage_Dataframe(FINAL_wine_df_filtered_All_Bottles_FINAL)\n",
-    "vintage_df_M2_final = Final_Vintage_Dataframe(recommended_vintages_M2_df, all_vintages_M2_df, FINAL_wine_df_FINAL, lower_date_bound = 2000, lower_rating_bound  = 3, lower_review_count = 1)\n",
-    "vintage_df_M2_final.to_csv(os.path.join(final_df_file_path, 'vintage_df_M2_final.csv'), index=False)"
+    "# recommended_vintages_M2_df, all_vintages_M2_df = Vintage_Dataframe(FINAL_wine_df_filtered_All_Bottles_FINAL)\n",
+    "# vintage_df_M2_final = Final_Vintage_Dataframe(recommended_vintages_M2_df, all_vintages_M2_df, FINAL_wine_df_FINAL, lower_date_bound = 2000, lower_rating_bound  = 3, lower_review_count = 1)\n",
+    "# vintage_df_M2_final.to_csv(os.path.join(final_df_file_path, 'vintage_df_M2_final.csv'), index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,21 +574,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "FINAL_training_data_Model2_FINAL = Training_Data_Model2(Columned_Weather_Data, vintage_df_M2_final, FINAL_wine_df_filtered_All_Bottles_FINAL)\n",
-    "# FINAL_training_data_Model2_FINAL.to_csv(os.path.join(final_df_file_path, 'FINAL_training_data_Model2_FINAL.csv'), index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FINAL_training_data_Model2_FINAL"
+    "FINAL_training_data_Model2_FINAL.to_csv(os.path.join(final_df_file_path, 'FINAL_training_data_Model2_FINAL.csv'), index=False)"
    ]
   },
   {
