Final updates to machine learning models 1 and 2

--- a/03_Training_Dataset.ipynb
+++ b/03_Training_Dataset.ipynb
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,6 +458,13 @@
     "    final_df_M2.insert(1, 'WineType', final_df_M2.pop('WineType'))\n",
     "    final_df_M2.insert(2, 'District', final_df_M2.pop('District'))\n",
     "    final_df_M2.insert(3, 'Year', final_df_M2.pop('Year'))\n",
+    "\n",
+    "    #Drop na from applicable columns\n",
+    "    final_df_M2 = final_df_M2.dropna(subset = [\n",
+    "        'Producer', 'WineType', 'District', \n",
+    "        'Year', 'Ratings_Average', 'Acidity', 'Intensity', \n",
+    "        'Sweetness', 'Tannin'\n",
+    "        ]) \n",
     "\n",
     "    return final_df_M2"
    ]
@@ -574,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
