Worked on getting data for popular dataframes

--- a/02_Popular_Wines.ipynb
+++ b/02_Popular_Wines.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Function Breakdown Section 1\n",
+    "Function Breakdown \n",
     "---\n",
     "SQL_Files_to_df\n",
     "- pulls scraped wine data from an SQL file and converts it to a dataframe\n",
@@ -491,7 +491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Variable Section 1\n"
+    "## Code Running Section\n"
    ]
   },
   {
@@ -572,7 +572,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Function Breakdown Section 2\n",
+    "Function Breakdown \n",
     "---\n",
     "Plotting_Unique_Locations\n",
     "- plots all the wine locations from producer using the Wine_DataFrame function "
@@ -626,7 +626,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# Variable Section 2\n"
+    "## Code Running Section"
    ]
   },
   {
