--- a/03_Weather_Data.ipynb
+++ b/03_Weather_Data.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Function Breakdown Section 3\n",
+    "Function Breakdown \n",
     "---\n",
     "Weather_Data_DataFrame\n",
     "- pulls the weather data on a hourly scale for a specific lat and long, from a start date to an end data\n",
@@ -276,7 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Variable Section 3\n",
+    "Code Running Section\n",
     "---"
    ]
   },
