--- a/04_Training_Dataset.ipynb
+++ b/04_Training_Dataset.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Function Breakdown Section 4\n",
+    "Function Breakdown\n",
     "---\n",
     "Vintage_Dataframe\n",
     "- grabs two dataframes based on the URLs pulled from the popular producers of the specific wines\n",
@@ -474,7 +474,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Variable Section 4 \n"
+    "## Code Running Section\n",
+    "\n"
    ]
   },
   {
@@ -504,13 +505,6 @@
    "source": [
     "### Create training dataset 1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
