Added a new dataset, did some markdown formats

--- a/04_Training_Dataset.ipynb
+++ b/04_Training_Dataset.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training Data\n",
+    "This code formats and creates the training datasets. Vintage data for each of the popular bottles is pulled, so each bottle will have roughly 23 years of rating data. Weather data is then added for each bottle for each year and formated into monthly data. The final format will see a unique producer and winetype have vintage data extended across each year, with a unique rating and weather data for each. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +483,10 @@
    "source": [
     "---\n",
     "## Code Running Section\n",
-    "\n"
+    "\n",
+    "This section of code will create the final training data for 3 models. Model 1 and 3 will focus on the influence will highlight the effect of primarily weather data on the rating based on two different sets of producers. The model 1 training dataset was filtered based on popularity, focusing on 1-6 districts per region. While training dataset 3 focuses on 3 regions and 3 districts in each country, filtering out extreme prices. Overall, dataset 3 is more filtered than dataset 1. This was done to reduce the varaibility in the datapoints chosen, ensuring that a less bias data point was chosen. \n",
+    "\n",
+    "Training dataset 2 takes all the winetypes and producers for the top 1-5 districts. This dataset will look more at the influence of vintage taste quantifiers and price on the rating.\n"
    ]
   },
   {
@@ -487,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +506,9 @@
     "\n",
     "FINAL_wine_df_FINAL = pd.read_csv(os.path.join(final_df_file_path, 'FINAL_wine_df_FINAL.csv'))\n",
     "FINAL_weather_data_FINAL = pd.read_csv(os.path.join(final_df_file_path, 'FINAL_weather_data_FINAL.csv'))\n",
+    "FINAL_weather_data_2_FINAL = pd.read_csv(os.path.join(final_df_file_path, 'FINAL_weather_data_2_FINAL.csv'))\n",
     "FINAL_wine_df_filtered_1Bottle_FINAL = pd.read_csv(os.path.join(final_df_file_path, 'FINAL_wine_df_filtered_1Bottle_FINAL.csv'))\n",
+    "FINAL_wine_df_filtered_different_1Bottle_FINAL = pd.read_csv(os.path.join(final_df_file_path, 'FINAL_wine_df_filtered_different_1Bottle_FINAL.csv'))\n",
     "FINAL_wine_df_filtered_All_Bottles_FINAL = pd.read_csv(os.path.join(final_df_file_path, 'FINAL_wine_df_filtered_All_Bottles_FINAL.csv'))"
    ]
   },
@@ -508,35 +521,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "An error occurred for URL: https://www.vivino.com/red-rooster-winery-malbec/w/94134 - list index out of range\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\fwhal\\AppData\\Local\\Temp\\ipykernel_26308\\765666366.py:68: UserWarning: Converting to PeriodArray/Index representation will drop timezone information.\n",
-      "  Grouped_Daily_into_Monthly = monthly_df.groupby(monthly_df.index.to_period('M'))\n",
-      "C:\\Users\\fwhal\\AppData\\Local\\Temp\\ipykernel_26308\\765666366.py:75: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  'WineType' : Grouped_Daily_into_Monthly['Top WineType'].first()[0],\n",
-      "C:\\Users\\fwhal\\AppData\\Local\\Temp\\ipykernel_26308\\765666366.py:76: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  'District' : Grouped_Daily_into_Monthly['Top District'].first()[0],\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "recommended_vintages_M1_df, all_vintages_M1_df = Vintage_Dataframe(FINAL_wine_df_filtered_1Bottle_FINAL)\n",
-    "vintage_df_M1_final = Final_Vintage_Dataframe(recommended_vintages_M1_df, all_vintages_M1_df, FINAL_wine_df_FINAL, lower_date_bound = 2000, lower_rating_bound  = 3, lower_review_count = 1)\n",
+    "# recommended_vintages_M1_df, all_vintages_M1_df = Vintage_Dataframe(FINAL_wine_df_filtered_1Bottle_FINAL)\n",
+    "# vintage_df_M1_final = Final_Vintage_Dataframe(recommended_vintages_M1_df, all_vintages_M1_df, FINAL_wine_df_FINAL, lower_date_bound = 2000, lower_rating_bound  = 3, lower_review_count = 1)\n",
     "\n",
-    "FINAL_training_data_Model1_FINAL, Columned_Weather_Data = Training_Data(FINAL_weather_data_FINAL, vintage_df_M1_final)\n",
-    "FINAL_training_data_Model1_FINAL.to_csv(os.path.join(final_df_file_path, 'FINAL_training_data_Model1_FINAL.csv'), index=False)"
+    "# FINAL_training_data_Model1_FINAL, Columned_Weather_Data = Training_Data(FINAL_weather_data_FINAL, vintage_df_M1_final)\n",
+    "# FINAL_training_data_Model1_FINAL.to_csv(os.path.join(final_df_file_path, 'FINAL_training_data_Model1_FINAL.csv'), index=False)"
    ]
   },
   {
@@ -548,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,6 +551,48 @@
     "\n",
     "# FINAL_training_data_Model2_FINAL = Training_Data_Model2(Columned_Weather_Data, vintage_df_M2_final, FINAL_wine_df_filtered_All_Bottles_FINAL)\n",
     "# FINAL_training_data_Model2_FINAL.to_csv(os.path.join(final_df_file_path, 'FINAL_training_data_Model2_FINAL.csv'), index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create training dataset 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An error occurred for URL: https://www.vivino.com/our-story-cabernet-merlot/w/10836208 - 'NoneType' object has no attribute 'get'\n",
+      "An error occurred for URL: https://www.vivino.com/henry-of-pelham-bin-106-lost-boys-limited-edition-baco-noir/w/8938417 - 'NoneType' object has no attribute 'get'\n",
+      "An error occurred for URL: https://www.vivino.com/odfjell-aliara/w/73593 - 'NoneType' object has no attribute 'get'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\fwhal\\AppData\\Local\\Temp\\ipykernel_5868\\765666366.py:68: UserWarning: Converting to PeriodArray/Index representation will drop timezone information.\n",
+      "  Grouped_Daily_into_Monthly = monthly_df.groupby(monthly_df.index.to_period('M'))\n",
+      "C:\\Users\\fwhal\\AppData\\Local\\Temp\\ipykernel_5868\\765666366.py:75: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  'WineType' : Grouped_Daily_into_Monthly['Top WineType'].first()[0],\n",
+      "C:\\Users\\fwhal\\AppData\\Local\\Temp\\ipykernel_5868\\765666366.py:76: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  'District' : Grouped_Daily_into_Monthly['Top District'].first()[0],\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommended_vintages_M3_df, all_vintages_M3_df = Vintage_Dataframe(FINAL_wine_df_filtered_different_1Bottle_FINAL)\n",
+    "vintage_df_M3_final = Final_Vintage_Dataframe(recommended_vintages_M3_df, all_vintages_M3_df, FINAL_wine_df_FINAL, lower_date_bound = 2000, lower_rating_bound  = 3, lower_review_count = 1)\n",
+    "\n",
+    "FINAL_training_data_Model3_FINAL, Columned_Weather_Data_3 = Training_Data(FINAL_weather_data_2_FINAL, vintage_df_M3_final)\n",
+    "FINAL_training_data_Model3_FINAL.to_csv(os.path.join(final_df_file_path, 'FINAL_training_data_Model3_FINAL.csv'), index=False)"
    ]
   },
   {
